--- a/index.html
+++ b/index.html
@@ -2,11 +2,53 @@
 <html lang="pt-br">
 
   <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-  </head>
-  <body>
+
+    <title>Conversor de Moedas - ID3</title>
     
+    <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+  </head>
+  
+  <body>
+    <div class="container">
+      <h1 class="page-title">
+        Conversor de moedas
+      </h1>
+      <p class="page-subtitle">
+        Descubra os valores em real R$
+      </p>
+      <img 
+        src="https://www.alura.com.br/assets/img/imersoes/dev-2021/logo-imersao-conversor-de-moedas.svg" class="page-logo" 
+        alt=""
+      />
+      <br>
+      <br>
+      <label 
+        for="moeda">
+          Insira o valor
+      </label>
+      <br>
+      <input 
+        type="number" 
+        id="valor" 
+        size="2" 
+      />
+      <br>
+      <button 
+        type="submit" 
+        onclick="Converter()">
+          Converter
+      </button>
+      <h2 
+        id="valorConvertido">
+      </h2>
+    </div>
+
+    <script src="./scripts.js"></script>
   </body>
 </html>
